--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,37 @@ html {
 /* header de la pagina */
 header {
     display: flex;
-    height: 15vh;
+    height: 10vh;
     width: 100%;
     justify-content: flex-end;
     align-items: center;
+}
+
+header img {
+    height: 2.5vh;  
+}
+
+header .user_image {
+    border: 0.1rem solid transparent;
+    border-radius: 100rem;
+    height: 4vh;
+}
+
+header picture {
+    border: 0.1rem solid transparent;
+    border-radius: 1rem;
+}
+
+header picture, header div {
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 /* cuerpo principal de la pagina */
 main {
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    height: 80vh;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -74,7 +94,7 @@ main {
 /* footer de la pagina */
 footer{
     display: flex;
-    height: 15vh;
+    height: 10vh;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -83,4 +103,9 @@ footer{
 
 .containers_footer {
     display: flex;
+}
+
+.containers_footer p {
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
