--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: arial,sans-serif;
 }
 
 html {
@@ -79,17 +80,16 @@ main {
 
 .search_buttoms span {
     display: flex;
-    background-color: lightgray;
+    background-color: #dadce0;
     height: inherit;
     margin: 0.5vh;
     width: 10vw;
-    border: 0.1rem solid lightgray;
+    border: 0.1rem solid #dadce0;
     border-radius: 0.5rem;
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-    
+}    
 
 /* footer de la pagina */
 footer{
@@ -98,7 +98,7 @@ footer{
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    background-color: lightgray;
+    background-color: #dadce0;
 }
 
 .containers_footer {
