--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 /* header de la pagina */
-header {
+header{
     display: flex;
     height: 10vh;
     width: 100%;
@@ -18,25 +18,16 @@ header {
     align-items: center;
 }
 
-header img {
-    height: 2.5vh;  
+nav ul{
+    display: flex;
 }
 
-header .user_image {
-    border: 0.1rem solid transparent;
-    border-radius: 100rem;
-    height: 4vh;
-}
-
-header picture {
-    border: 0.1rem solid transparent;
-    border-radius: 1rem;
-}
-
-header picture, header div {
+ul li {
+    list-style-type: none;
     margin-left: 1rem;
     margin-right: 1rem;
 }
+
 
 /* cuerpo principal de la pagina */
 main {
