--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ header nav .nav_right_section{
     color: black;
 }
 
+.nav_right_section a:hover{
+    text-decoration: underline;
+}
+
 nav .nav_right_section .menu_icon {
     background-image: url('https://static.thenounproject.com/png/756729-200.png');
     background-repeat: no-repeat;
@@ -171,6 +175,9 @@ footer{
     justify-content: space-between;
     align-items: center;
     background-color: #f2f2f2;
+    position: absolute;
+    bottom: 0;
+    border: 0.1rem solid #dadce0;
 }
 
 .containers_footer {
@@ -182,4 +189,8 @@ footer{
     margin-left: 1rem;
     margin-right: 1rem;
     color: black;
+}
+
+.containers_footer a:hover {
+    text-decoration: underline;
 }
